--- a/infra/plugins/nvidia/nvidia-device-plugin.yaml
+++ b/infra/plugins/nvidia/nvidia-device-plugin.yaml
@@ -33,6 +33,15 @@ spec:
       - key: nvidia.com/gpu
         operator: Exists
         effect: NoSchedule
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: kubernetes.io/hostname 
+                  operator: In
+                  values: 
+                    - archbox
       # Mark this pod as a critical add-on; when enabled, the critical add-on
       # scheduler reserves resources for critical add-on pods so that they can
       # be rescheduled after a failure.
